2002-05-16  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* bin/mj_queuerun (run_queue): Perform date sorting differently to
	guard against warnings when queue files are deleted by another
	process.
	
2002-05-11  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* bin/mj_queuerun: Add commented block to enable backtraces for
	warnings.

2002-05-10  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* bin/mj_shell (tempfile): Include directory name in error
	message.
	
2002-05-08  Michael Yount <csf@moscow.com>

	* t/*.t  Change "perl-latest" to "perl" in test files to 
	avoid errors from recent versions of Test::Harness.
	Thanks to Deb Heller-Evans.

2002-05-07  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/BounceParser.pm (parse_compuserve, parse_compuserve2):
	Make sure that there actually is a From: header.

2002-05-06  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Mj/Deliver/Dest.pm (_gen_bounces): New function: generate a
	bounce for each failed address.
	(flush): Remove bounce generation and call _gen_bounces instead.

2002-05-06  Michael Yount <csf@moscow.com>

	* bin/mj_wwwadm, bin/mj_wwwusr:  
	Deal with special characters in query strings more thoroughly.
	Bugfix:  Display user address more clearly if an invalid list
	is given.  Validate the user address more robustly.
	Thanks to Larry Rosenbaum and Roger Klorese.
	
	* lib/Mj/Format.pm:  (cgidata)  Bugfix:  Escape 
	non-alphanumeric characters in query strings.  
	Thanks to Nick Simicich.

	* lib/Mj/Log.pm:  (message)  Bugfix:  Double percent signs
	to avoid warnings.  Thanks to Nick Simicich.
	
2002-05-05  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Mj/Deliver/Dest.pm (flush): When generating a bounce for an
	address that timed out, include a useful error message instead of
	printing a blank and generating some undef warnings.

2002-05-04  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Mj/Lock.pm: Use Time::HiRes if available.
	(lock): Store the time the lock was acquired.